--- a/Shinobu/CMakeLists.txt
+++ b/Shinobu/CMakeLists.txt
@@ -5,6 +5,8 @@ project(Shinobu VERSION 1.0
 )
 
 add_library(Shinobu
+    src/Shinobu/Shinobu.h
+    
     src/Shinobu/Core/Core.h
     src/Shinobu/Core/Log.h
     src/Shinobu/Core/Log.cpp
@@ -19,24 +21,42 @@ target_include_directories(Shinobu PUBLIC
     src
 )
 
+target_precompile_headers(Shinobu 
+    PRIVATE
+        <iostream>
+        <memory>
+        <utility>
+        <algorithm>
+        <functional>
+        <string>
+        <sstream>
+        <array>
+        <vector>
+        <unordered_map>
+        <unordered_set>
+
+        src/Shinobu/Core/Log.h
+)
+
 # Download submodules if needed
 find_package(Git QUIET)
 if(GIT_FOUND AND EXISTS "${CMAKE_SOURCE_DIR}/.git")
-# Update submodules as needed
-option(GIT_SUBMODULE "Check submodules during build" ON)
-if(GIT_SUBMODULE)
-message(STATUS "Submodule update")
-execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
-WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-RESULT_VARIABLE GIT_SUBMOD_RESULT)
-if(NOT GIT_SUBMOD_RESULT EQUAL "0")
-message(FATAL_ERROR "git submodule update --init failed with ${GIT_SUBMOD_RESULT}, please checkout submodules")
-endif()
-endif()
+    # Update submodules as needed
+    option(GIT_SUBMODULE "Check submodules during build" ON)
+    if(GIT_SUBMODULE)
+        message(STATUS "Submodule update")
+        execute_process(COMMAND 
+                        ${GIT_EXECUTABLE} submodule update --init --recursive
+                        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+                        RESULT_VARIABLE GIT_SUBMOD_RESULT)
+        if(NOT GIT_SUBMOD_RESULT EQUAL "0")
+            message(FATAL_ERROR "git submodule update --init failed with ${GIT_SUBMOD_RESULT}, please checkout submodules")
+        endif()
+    endif()
 endif()
 
 if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/thirdParty/spdlog/CMakeLists.txt")
-message(FATAL_ERROR "The submodules were not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
+    message(FATAL_ERROR "The submodules were not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
 endif()
 
 # Since we are building spdlog from scratch, we should just include it
