Added base class for events

--- a/Shinobu/CMakeLists.txt
+++ b/Shinobu/CMakeLists.txt
@@ -13,6 +13,8 @@ add_library(Shinobu
     src/Shinobu/Core/EntryPoint.h
     src/Shinobu/Core/Log.h
     src/Shinobu/Core/Log.cpp
+
+    src/Shinobu/Events/Event.h
 )
 
 if(BUILD_SHARED_LIBS)
@@ -38,7 +40,10 @@ target_precompile_headers(Shinobu
         <unordered_map>
         <unordered_set>
 
+        src/Shinobu/Core/Application.h
         src/Shinobu/Core/Log.h
+
+        src/Shinobu/Events/Event.h
 )
 
 # Download submodules if needed
