Added a layer class and a layer stack to the project

--- a/Shinobu/CMakeLists.txt
+++ b/Shinobu/CMakeLists.txt
@@ -34,7 +34,7 @@ target_include_directories(Shinobu PUBLIC
 )
 
 target_precompile_headers(Shinobu 
-    PRIVATE
+    PUBLIC
         <iostream>
         <memory>
         <utility>
