Changed layer update to be event based instead of overwriting functions
Making layer updates event based allows us to easily add new callbacks such as gui render calls
and physics render calls without changing the layer interface. This also makes sense since not all layers
need to overwrite all functions.

--- a/Shinobu/CMakeLists.txt
+++ b/Shinobu/CMakeLists.txt
@@ -21,6 +21,7 @@ add_library(Shinobu
     src/Shinobu/Event/ApplicationEvent.h
     src/Shinobu/Event/Event.h
     src/Shinobu/Event/KeyEvent.h
+    src/Shinobu/Event/LayerEvent.h
     src/Shinobu/Event/MouseEvent.h
 
     src/Shinobu/ImGui/ImGuiBuild.cpp
