Added temporary code so that I can verify rendering pipeline and abstract it bit by bit

--- a/Shinobu/CMakeLists.txt
+++ b/Shinobu/CMakeLists.txt
@@ -59,7 +59,7 @@ add_library(Shinobu
     src/Platform/OpenGL/OpenGLVertexArray.cpp
 #    src/Platform/OpenGL/OpenGLVertexBuffer.h
 #    src/Platform/OpenGL/OpenGLVertexBuffer.cpp
-)
+ "src/Shinobu/Core/Window.cpp")
 
 target_precompile_headers(Shinobu 
     PUBLIC
