Added command in CMake to copy res folder to build dir if it exists

--- a/Shinobu/CMakeLists.txt
+++ b/Shinobu/CMakeLists.txt
@@ -62,7 +62,9 @@ add_library(Shinobu
     src/Platform/OpenGL/OpenGLVertexArray.cpp
     src/Platform/OpenGL/OpenGLVertexBuffer.h
     src/Platform/OpenGL/OpenGLVertexBuffer.cpp
-)
+
+    src/Shinobu/Renderer/OrthographicCamera.h
+    src/Shinobu/Renderer/OrthographicCamera.cpp)
 
 target_precompile_headers(Shinobu 
     PUBLIC
