--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -18,4 +18,16 @@ if(BUILD_SHARED_LIBS)
     )
 endif()
 
+if (EXISTS ${CMAKE_SOURCE_DIR}/Shinobu/res)
+add_custom_command(TARGET Sandbox POST_BUILD
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory
+                   ${CMAKE_SOURCE_DIR}/Shinobu/res $<TARGET_FILE_DIR:Sandbox>/res)
+endif()
+
+if (EXISTS ${CMAKE_SOURCE_DIR}/Sandbox/res)
+add_custom_command(TARGET Sandbox POST_BUILD
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory
+                   ${CMAKE_SOURCE_DIR}/Sandbox/res $<TARGET_FILE_DIR:Sandbox>/res)
+endif()
+
 target_link_libraries(Sandbox PUBLIC Shinobu)
