Moved entry point main func to a cpp file so that it won't be defined multiple times. Moved CreateApplication decleration to entry header

--- a/Shinobu/CMakeLists.txt
+++ b/Shinobu/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(Shinobu
     src/Shinobu/Core/Application.cpp
     src/Shinobu/Core/Core.h
     src/Shinobu/Core/EntryPoint.h
+    src/Shinobu/Core/EntryPoint.cpp
     src/Shinobu/Core/Layer.h
     src/Shinobu/Core/LayerStack.h
     src/Shinobu/Core/LayerStack.cpp
