Net packets are now communicated via events. This allows the user to listen in on packets and handle them as desired. You don't have to set up a server or client, just listen for the event. It also allows us to react on client or server changes and it handles all the parallel operations for us. For example when trying to connect to a server, you can listen for the response event that will be emitted somewhere.

--- a/Shinobu/CMakeLists.txt
+++ b/Shinobu/CMakeLists.txt
@@ -33,6 +33,7 @@ add_library(Shinobu
     src/Shinobu/Event/Event.h
     src/Shinobu/Event/KeyEvent.h
     src/Shinobu/Event/MouseEvent.h
+    src/Shinobu/Event/NetEvent.h
     
     src/Shinobu/ECS/Registry.h
     src/Shinobu/ECS/Registry.cpp
@@ -43,10 +44,14 @@ add_library(Shinobu
 
     src/Shinobu/Net/Client.h
     src/Shinobu/Net/Client.cpp
+    src/Shinobu/Net/ClientLayer.h
+    src/Shinobu/Net/ClientLayer.cpp
     src/Shinobu/Net/Packet.h
     src/Shinobu/Net/Packet.cpp
     src/Shinobu/Net/Server.h
     src/Shinobu/Net/Server.cpp
+    src/Shinobu/Net/ServerLayer.h
+    src/Shinobu/Net/ServerLayer.cpp
 
     src/Shinobu/Renderer/GraphicsContext.h
     src/Shinobu/Renderer/GraphicsContext.cpp
