Server now broadcasts local simulation to all users

--- a/Shinobu/CMakeLists.txt
+++ b/Shinobu/CMakeLists.txt
@@ -37,6 +37,8 @@ add_library(Shinobu
     
     src/Shinobu/ECS/Registry.h
     src/Shinobu/ECS/Registry.cpp
+    src/Shinobu/ECS/Scene.h
+    src/Shinobu/ECS/Scene.cpp
 
     src/Shinobu/ImGui/ImGuiBuild.cpp
     src/Shinobu/ImGui/ImGuiLayer.h
